(include_subdirs qualified)
(coq.theory
 (name bedrock)                ; This will determine the toplevel
 ; module of your theory, modules will
 ; be MyPlugin.A, etc... when seen from
 ; outside.

 (package coq-cpp2v)            ; Adding this line will make your
 ; library installable in the package

 (flags (
   ; We sometimes want to locally override notation (e.g. in proofmode/base.v, bi/embedding.v), and there
   ; is no good way to do that with scopes.
   ; -w -notation-overridden
   ; non-canonical projections (https://github.com/coq/coq/pull/10076) do not exist yet in 8.9.
   ; -w -redundant-canonical-projection
   ; change_no_check does not exist yet in 8.9.
   -w -convert_concl_no_check
   ; We have ambiguous paths and so far it is not even clear what they are (https://gitlab.mpi-sws.org/iris/iris/issues/240).
   -w -ambiguous-paths
   )
))
